--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,8 +33,12 @@ body {
  display: flex;
  }
 
+ li:hover {
+  text-decoration: underline;
+}
+
 .herocontent {
-  padding: 5%;
+  padding: 15%;
   outline: 1px solid red;
   text-align: center;  
   background-image: url(https://images.unsplash.com/photo-1559825481-12a05cc00344?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8b2NlYW58ZW58MHx8MHx8fDA%3D);
@@ -50,7 +54,7 @@ body {
  text-align: left;
  padding: 20px;
  margin: auto; 
- margin-block-start: 10%;
+ margin-block-start: 5%;
  margin-block-end: 10%; 
  outline: 1px solid red;
 }
@@ -122,7 +126,7 @@ footer ul {
 
 @media only screen and (max-width: 600px) {
   .parent {
-    grid-template-rows: 300px 300px 300px 300px 300px;
+  grid-template-rows: 300px 300px 300px 300px 300px;
   grid-template-columns: 1fr 1fr;
   grid-template-areas: 
    "mountain mountain2"
