--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,6 +3,7 @@
 }
 body {
   background-color: #001d31;
+  font-size: larger;
 }
 
 
@@ -14,7 +15,6 @@ body {
   padding: 20px 40px;
   z-index: 10; 
   position: relative;
-  outline: 1px solid red;
  }
 
 .logo-img {
@@ -41,7 +41,6 @@ body {
 
 .herocontent {
   padding: 15%;
-  outline: 1px solid red;
   text-align: center;  
   background-image: url(https://images.unsplash.com/photo-1559825481-12a05cc00344?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8b2NlYW58ZW58MHx8MHx8fDA%3D);
   background-repeat: no-repeat;
@@ -58,7 +57,6 @@ body {
  margin: auto; 
  margin-block-start: 5%;
  margin-block-end: 10%; 
- outline: 1px solid red;
 }
 
 .parent {
@@ -88,7 +86,6 @@ img {
   margin: auto;
   margin-block-start: 10%;
   margin-block-end: 10%; 
-  outline: 1px solid red;
 }
 
 button {
@@ -103,8 +100,7 @@ button {
   width: 30%;
 }
 .footer {
-  outline: 1px solid red;
-  margin-top: 10%;
+  margin-top: 5%;
   align-items: center; 
   text-align: center;
   z-index: 10; 
@@ -116,15 +112,27 @@ button {
 }
 
 .get {
+  padding: 5%;
   font-family: fantasy;
   font-size: larger;
 }
 
 footer ul {
-   outline: 1px solid red;
    display: flex;
    justify-content: space-around;
 }
+
+.button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: transparent;
+  color: white;
+  outline: 2px solid white;
+  max-width: 150px;
+}
+
+
 
 @media only screen and (max-width: 600px) {
   .parent {
