--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -99,7 +99,7 @@ img {
 .btn-container {
 display: flex;
 background-color: transparent;
-color: white;
+color: whitesmoke;
 margin: auto;
 margin-left: 10px;
 margin-right: 10px;
